src/test/deca/context/valid/personalTests/bs.deca
{
    int a = 123;
    int b = a<<3;
    int c = (-a)>>3;
}