src/test/deca/context/invalid/personalTests/FieldNoField.deca
class A{
    int a;

    void b(){
        int c;
        c = 1;
    }
}

{
    A a;
    a = new A();
    a.c;
}